Extended functionality to support local and remote requests separately
Extended functionality of the system to support local and remote requests separately.. solving the Extra Credit part of the puzzle

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
     <body>
       <h1>Website Availability Rate</h1>
-      The success rate is: {{rate}}
+      The total requests success rate is: {{rate}}
+      <br>
+      The local requests success rate is: {{localrate}}
+      <br>
+      The remote requests success rate is: {{remoterate}}
+
     </body>
 </html>
